--- a/package.json
+++ b/package.json
@@ -78,5 +78,10 @@
     "mocha": "^10.0.0",
     "typescript": "^4.7.2",
     "@vscode/test-electron": "^2.1.3"
+  },
+  "LICENSE": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Alfred-Lau/bitou-emmet.git"
   }
 }
