--- a/package.json
+++ b/package.json
@@ -79,9 +79,10 @@
     "typescript": "^4.7.2",
     "@vscode/test-electron": "^2.1.3"
   },
-  "LICENSE": "MIT",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Alfred-Lau/bitou-emmet.git"
-  }
+  },
+  "publisher": "alfredlau"
 }
